[project]
name = "power-flow-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartopy>=0.24.1",
    "highspy>=1.9.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pypowsybl>=1.10.0",
    "pypsa>=0.33.1",
    "pyscipopt>=5.4.1",
]
